syntax = "proto3";

option csharp_namespace = "Mtim.Grpc.Modbus";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service ModbusService {
  // Sends a greeting
  rpc ModbusGrpcUdpMasterReadRegisters (ModbusUdpRequest) returns (UShortArray);
}

// 模拟ushort[]的message
message UShortArray {
  repeated uint32 items = 1; // 使用repeated uint32来存储ushort值的列表
}

message ModbusUdpRequest {
  string Ip = 1;
  uint32 Port = 2;
  uint32 SlaveId = 3;
  uint32 StartAddress = 4;
  uint32 NumInputs = 5;
  uint32 Val = 6;
}
